--- a/template/src/views/layouts/base.html
+++ b/template/src/views/layouts/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/node_modules/css/master.css">
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="/build/css/main.css" />
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
