--- a/template/views/layouts/base.html
+++ b/template/views/layouts/base.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/node_modules/css/master.css">
     <link rel="stylesheet" href="/dist/css/main.css" />
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -36,5 +35,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="/dist/js/main.js"></script>
   </body>
 </html>
