--- a/template/views/layouts/base.html
+++ b/template/views/layouts/base.html
@@ -39,7 +39,7 @@
     <script src="/dist/js/main.js"></script>
     {% if isDev %}
       <!-- This scripts enables live css reloading. Only use in development. -->
-      <script src="/dist/js/live-css-reloader.js"></script>
+      <script src="live-css-reloader.js"></script>
     {% endif %}
   </body>
 </html>
