--- a/template/views/layouts/base.html
+++ b/template/views/layouts/base.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="/dist/css/main.css" />
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,9 +12,6 @@
     <title>{{ brandName }}</title>
 
     <meta name="robots" content="index, follow">
-
-    <!-- <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
-    <link rel="shortcut icon" href="/images/favicon.ico"> -->
   </head>
   <body class="Page Page--hasMaxWidth">
     <header class="Page-header">
@@ -40,6 +38,18 @@
     {% if isDev %}
       <!-- This scripts enables live css reloading. Only use in development. -->
       <script src="live-css-reloader.js"></script>
+    {% endif %}
+    {% if not isDev %}
+      <script>
+        /* Google Analytics */
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', '{{ googleAnalyticsCode }}', 'auto');
+        ga('send', 'pageview');
+      </script>
     {% endif %}
   </body>
 </html>
